test/functions/bradc/badTypeAsFnName.good
badTypeAsFnName.chpl:3: error: unresolved call 'real(64)(complex(128))'
