test/functions/bradc/badTypeAsFnName.chpl
var c: complex;

var r = real(c);
var i = imag(c);

writeln((c,r,i));
